--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   webview_flutter: ^4.10.0
   flutter_native_splash: ^2.4.4
   shimmer: ^3.0.0
+  connectivity_plus: ^6.1.3
+  flutter_launcher_icons: ^0.14.3
+  package_info_plus: ^8.3.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +34,11 @@ flutter_native_splash:
   fill: vertical
   android: true
   ios: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+  min_sdk_android: 21
+
+
