--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: noghotokapp
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: ^3.5.4
@@ -16,6 +16,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   package_info_plus: ^8.3.0
   http: ^1.3.0
+  shared_preferences: ^2.5.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
